# middleware/auth.js
@@ -5,18 +5,19 @@ const Driver = require('../models/Driver');
 
 const auth = async (req, res, next) => {
     try {
-        // const token = req.header('Authorization').replace('Bearer ', '');
-        // const decoded = jwt.verify(token, 'your_secret_key');
-        // const user = await User.findOne({ _id: decoded._id, 'tokens.token': token });
-        // const driver = await Driver.findOne({ _id: decoded._id, 'tokens.token': token });
+        const token = req.header('Authorization').replace('Bearer ', '');
+        console.log({token});
+        const decoded = jwt.verify(token, 'your_secret_key');
+        const user = await User.findOne({ _id: decoded._id, });
+        const driver = await Driver.findOne({ _id: decoded._id, });
 
-        // if (!user && !driver) {
-        //     throw new Error();
-        // }
+        if (!user && !driver) {
+            throw new Error();
+        }
 
-        // req.token = token;
-        // req.user = user;
-        // req.driver = driver;
+        req.token = token;
+        req.user = user;
+        req.driver = driver;
         next();
     } catch (e) {
         res.status(401).send({ error: 'Please authenticate.' });
